--- a/css/main.css
+++ b/css/main.css
@@ -574,7 +574,6 @@ header .container-fluid .menu {
   .main_alm .wrap_column-1_carta .plato-carta1 img{
     width: 100%;
     height: 200px;
-    background-color: #00C3FF;
   }
   .main_alm .font_alm {
     font-size: 2.5rem;
@@ -596,6 +595,17 @@ header .container-fluid .menu {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
+  }
+  .main_des .wrap_column-2_carta .plato-carta{
+    height: 420px;
+    width: 280px;
+    font-family:'PT Serif', serif;
+    overflow: hidden;
+    box-shadow: 13px 8px 27px 0px rgba(0,0,0,0.75);
+  }
+  .main_des .wrap_column-2_carta .plato-carta img{
+    width: 100%;
+    height: 200px;
   }
   .main_des .font_des {
     font-size: 2.5rem;
