--- a/css/main.css
+++ b/css/main.css
@@ -559,6 +559,10 @@ header .container-fluid .menu {
 }
 
 @media screen and (max-width: 768px) {
+  .main_alm .fondo {
+    height: 500px;
+    width: 100%;
+  }
   .main_alm .wrap_column-1_carta {
     display: grid;
     grid-template-columns: 1fr;
@@ -591,6 +595,10 @@ header .container-fluid .menu {
   }
 }
 @media screen and (max-width: 768px) {
+  .main_des .fondo{
+    height: 500px;
+    width: 100%;
+  }
   .main_des .wrap_column-2_carta {
     display: grid;
     grid-template-columns: 1fr;
@@ -605,7 +613,7 @@ header .container-fluid .menu {
   }
   .main_des .wrap_column-2_carta .plato-carta img{
     width: 100%;
-    height: 170px;
+    height: 190px;
   }
   .main_des .font_des {
     font-size: 2.5rem;
