--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 .pick_wine {
-  background-image: url(./../imgs/red_wine6.webp);
+  background-image: url(./../imgs/contactanos_redd.jpg);
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -99,7 +99,7 @@ h4 {
 }
 
 .mesa {
-  background-image: url(./../imgs/red_wine6.webp);
+  background-image: url(./../imgs/contactanos_redd.jpg);
 }
 
 
