--- a/scss/pages/_main-reserva.scss
+++ b/scss/pages/_main-reserva.scss
@@ -49,7 +49,7 @@
         }
     }
     .saludo_ws{
-        color:#521414;
+        color:#ebe9e9;
         background: none;
         font-weight: 500;
         text-align: left;
